<resources>
    <string name="app_name">Navigation2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms">Terms</string>
    <string name="terms_1">Terms 1</string>
    <string name="terms_2">Terms 2</string>
    <string name="terms_3">Terms 3</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="next">Next</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_email">Enter email</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="view_terms">View Terms</string>
</resources>